# OMPEval

./: CMakeLists.txt
omp/: CMakeLists.txt
